search filters position fixed & fullscreen vertical scrollbar (close #2)

--- a/app/assets/css/pamm.css
+++ b/app/assets/css/pamm.css
@@ -2,22 +2,49 @@ html {
 	height: 100%;
 }
 
-img {
-	border: 0px;
-}
-
 body {
-	background-color: #141414;
+	background-color: #0B0B0B;
 	color: #F9F9F9;
 	font-family: "Arial";
-	padding-left: 5px;
-	padding-right: 5px;
 	position:relative;
 	min-width: 550px;
 	min-height: 300px;
-	margin-top: 5px;
-	margin-left: 5px;
 	font-size: 16px;
+}
+
+header {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100px;
+	z-index: 1;
+	background-color: #141414;
+	padding: 5px;
+}
+
+nav {
+	position: fixed;
+	top: 100px;
+	left: 0px;
+	width: 100%;
+	height: 27px;
+	z-index: 1;
+	background-color: #141414;
+	padding: 0 5px;
+	border-bottom: 1px solid #515151;
+}
+
+#container {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	padding-top: 120px;
+	padding-bottom: 60px;
+}
+
+img {
+	border: 0px;
 }
 
 a {
@@ -31,13 +58,6 @@ a:visited {
 
 a:hover {
 	text-decoration: underline;
-}
-
-#container {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	margin: auto;
 }
 
 .banner_heading {
@@ -54,7 +74,6 @@ a:hover {
 
 .banner_image {
 	top: 5px;
-	position: absolute;
 }
 
 /******************
@@ -62,17 +81,18 @@ a:hover {
  ******************/
  
 .ui_tabs {
-    position: absolute;
-	top: 88px;
 	color: #888888;
 }
 
 .ui_tab_link {
-	margin-top: 7px;
-	margin-bottom: 7px;
-	margin-left: 6px;
-	margin-right: 6px;
-	float: left;
+	margin-bottom: 4px;
+	margin-left: 3px;
+	margin-right: 3px;
+	display: inline-block;
+}
+
+.ui_tab_link img {
+	vertical-align: text-bottom;
 }
 
 .ui_tab_link_selected {
@@ -92,12 +112,10 @@ a:hover {
 	padding-top: 3px;
 	padding-left: 4px;
 	padding-right: 4px;
-	float: left;
 }
 
 .ui_tab_edges {
 	color: #444444;
-	float: left;
 	font-size: 18px;
 }
 
@@ -106,12 +124,12 @@ a:hover {
  *******************************************/
 
 .alert_area {
-	width: 100%;
+	/*width: 100%;*/
 	padding-left: 9px;
 	padding-top: 3px;
 	padding-bottom: 3px;
 	background-color: #6B4900;
-	border-bottom: 1px solid #515151;
+	/*border-bottom: 1px solid #515151;*/
 	font-size: 14px;
 }
 
@@ -141,13 +159,14 @@ a:hover {
  **************/
 
 .filter_area {
-	width: 100%;
-	padding-left: 9px;
-	padding-top: 3px;
-	padding-bottom: 3px;
+	z-index: 1;
+	padding: 6px 5px 3px;
 	background-color: #202020;
 	border-bottom: 1px solid #515151;
 	font-size: 12px;
+	position: fixed;
+	left: 0px;
+	width: 100%;
 }
 
 .filter_area_container {
@@ -199,9 +218,9 @@ a:hover {
 
 .filter_area_textbox {
 	color: #f9f9f9;
-    background-color: #202020; 
-    border: solid 1px #888888; 
-    outline: none; 
+	background-color: #202020; 
+	border: solid 1px #888888; 
+	outline: none; 
 	width: 100%;
 }
 
@@ -236,13 +255,14 @@ a:hover {
 
 .mod_entry {
 	position: relative;
-	float: left;
 	width: 502px;
 	height: 110px;
 	margin: 10px;
 	padding: 6px;
 	cursor: default;
 	font-size: 11px;
+	display: inline-block;
+	vertical-align: text-top;
 }
 
 .mod_entry:hover  {
@@ -404,31 +424,15 @@ a:hover {
 	color: #888888;
 }
 
+.tab {
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
 
 .tab_content {
-	position: absolute;
 	width: 100%;
 	height: 100%;
-	border: 1px solid #515151;
 	background-color: #0B0B0B;
-	overflow-y: scroll;
-	overflow-x: hidden;
 	left: 0px;
-	margin-top: 120px;
 	z-index: 1;
 }
 
@@ -463,27 +467,11 @@ a:hover {
 	color: #cc8800;
 }
 
-
-
-
 .log_entry, .log_entry_debug {
 	margin-top: 4px;
 	margin-bottom: 2px;
 	font-size: 0.8em;
 	color: #F9F9F9;
-}
-
-.buttons {
-	position: absolute;
-	bottom: -160px;
-	left: 0px;
-}
-
-.buttons input {
-	float: left;
-	width: 90px;
-	margin-right: 6px;
-	margin-top: 3px;
 }
 
 .openModsFolderButton {
@@ -498,13 +486,6 @@ a:hover {
 	padding-left: 12px;
 	color: #cc8800;
 	font-weight: bold;
-}
-
-#downloading {
-	position: absolute;
-	bottom: -172px;
-	right: -8px;
-	display: none;
 }
 
 .news_container {
@@ -562,30 +543,22 @@ a:hover {
 }
 
 .log_entry {
-	padding-left: 7px;
-	padding-right: 7px;
-	padding-top: 4px;
 }
 
 .log_entry_debug {
 	color: #888888;
-	padding-left: 7px;
-	padding-right: 7px;
-	padding-top: 4px;
 }
 
 .settings_items {
-	padding: 7px;
 }
 .about_items {
-	padding: 9px;
 }
 
 .tab_heading {
 	color: #008cff;
 	font-family: "Verdana";
 	font-size: 18px;
-	padding: 7px;
+	padding: 4px 0 4px;
 }
 
 .tab_subheading {
@@ -624,15 +597,51 @@ a:hover {
 	color: #cc8800;
 }
 
+/**********
+ * FOOTER *
+ **********/
+
+footer {
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	padding: 0 5px;
+	background-color: #141414;
+	border-top: 1px solid #515151;
+	width: 100%;
+	height: 50px;
+	display: table;
+}
+
+footer > * {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+footer > *:last-child {
+	text-align: right;
+}
+
+#downloading {
+	display: none;
+	padding-right: 5px;
+}
+
+.buttons {
+	width: 350px;
+}
+
+.buttons input {
+	width: 90px;
+	margin-right: 6px;
+	margin-top: 3px;
+}
 
 #context {
-	position: absolute;
-	bottom: -160px;
-	left: 350px;
 }
 #context > span {
-    margin-right: 40px;
+	margin-right: 40px;
 }
 #context input:disabled + span {
-    color: #999;
+	color: #999;
 }
